--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,7 +5,7 @@
     .row
       .col-lg-12
         %h1.page-header
-          Dashboard
+          Users
           %small Statistics Overview
         %ol.breadcrumb
           %li.active
