--- a/app/views/pacientes/new.html.haml
+++ b/app/views/pacientes/new.html.haml
@@ -1,5 +1,21 @@
-%h1 New paciente
+.container-fluid
+	.row
+		.col-lg-12
+			%h1.page-header
+				Pacientes
+				%small Panel de control
 
-= render 'form'
 
-= link_to 'Back', pacientes_path
+	.row
+		.col-lg-12
+			.panel.panel-default
+				.panel-heading
+					%h3.panel-title
+						%i.fa.fa-user.fa-fw
+						Nuevo paciente
+				.panel-body
+
+
+					= render 'form'
+
+					= link_to 'Back', pacientes_path
