--- a/app/views/pacientes/show.html.haml
+++ b/app/views/pacientes/show.html.haml
@@ -1,4 +1,20 @@
-%p#notice= notice
+.container-fluid
+	.row
+		.col-lg-12
+			%h1.page-header
+				Pacientes
+				%small Panel de control
+
+
+	.row
+		.col-lg-12
+			.panel.panel-default
+				.panel-heading
+					%h3.panel-title
+						%i.fa.fa-user.fa-fw
+						Nuevo paciente
+				.panel-body
+
 
 
 = link_to 'Edit', edit_paciente_path(@paciente)
