prevenir cambios si no es el usuario

--- a/app/views/pacientes/_form.html.haml
+++ b/app/views/pacientes/_form.html.haml
@@ -9,4 +9,4 @@
 		= f.input :created_at, :as => :date_picker, :label => "Fecha de Ingreso", :required => true
   
 	= f.actions do
-		= f.action :submit, :label => "Crear Paciente"
+		= f.action :submit
