--- a/app/views/pacientes/edit.html.haml
+++ b/app/views/pacientes/edit.html.haml
@@ -1,7 +1,21 @@
-%h1 Editing paciente
+.container-fluid
+	.row
+		.col-lg-12
+			%h1.page-header
+				#{@paciente.name} #{@paciente.last_name}
+				%small Panel de control
 
-= render 'form'
 
-= link_to 'Show', @paciente
-\|
-= link_to 'Back', pacientes_path
+	.row
+		.col-lg-12
+			.panel.panel-default
+				.panel-heading
+					%h3.panel-title
+						%i.fa.fa-user.fa-fw
+							#{@paciente.name} #{@paciente.last_name}
+				.panel-body
+
+
+					= render 'form'
+
+					= link_to 'Back', pacientes_path
