--- a/app/views/pacientes/index.html.haml
+++ b/app/views/pacientes/index.html.haml
@@ -15,7 +15,7 @@
             %i.fa.fa-user.fa-fw
             Pacientes
         .panel-body
-          = link_to 'New Paciente', new_paciente_path
+          = link_to 'Nuevo Paciente', new_paciente_path
           .table-responsive
             %table.table.table-bordered.table-hover.table-striped
               %thead
