--- a/app/views/pacientes/show.html.haml
+++ b/app/views/pacientes/show.html.haml
@@ -2,7 +2,7 @@
 	.row
 		.col-lg-12
 			%h1.page-header
-				Pacientes
+				#{@paciente.name} #{@paciente.last_name}
 				%small Panel de control
 
 
