--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -19,7 +19,7 @@
           %i.fa.fa-info-circle
           %strong Like SB Admin?
           Try out
-          %a.alert-link{:href => "http://startbootstrap.com/template-overviews/sb-admin-2"} SB Admin 2
+          %a.alert-link{:href => "https://startbootstrap.com/template-overviews/sb-admin-2"} SB Admin 2
           for additional features!
     / /.row
     .row
