--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -146,15 +146,15 @@
               %li
                 Client:
                 %strong
-                  %a{:href => "http://startbootstrap.com"} Start Bootstrap
+                  %a{:href => "https://startbootstrap.com"} Start Bootstrap
               %li
                 Date:
                 %strong
-                  %a{:href => "http://startbootstrap.com"} April 2014
+                  %a{:href => "https://startbootstrap.com"} April 2014
               %li
                 Service:
                 %strong
-                  %a{:href => "http://startbootstrap.com"} Web Development
+                  %a{:href => "https://startbootstrap.com"} Web Development
             %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"}
               %i.fa.fa-times
               Close
