--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -19,7 +19,7 @@
           %a{:href => "#"}
             .media
               %span.pull-left
-                %img.media-object{:alt => "", :src => "http://placehold.it/50x50"}/
+                %img.media-object{:alt => "", :src => "https://placehold.it/50x50"}/
               .media-body
                 %h5.media-heading
                   %strong 
