--- a/app/views/pacientes/show.html.haml
+++ b/app/views/pacientes/show.html.haml
@@ -1,19 +1,53 @@
 .container-fluid
-	.row
-		.col-lg-12
-			%h1.page-header
-				#{@paciente.name} #{@paciente.last_name}
-				%small Panel de control
+  .row
+    .col-lg-12
+      %h1.page-header
+        #{@paciente.name} #{@paciente.last_name}
+        %small Panel de control
 
 
-	.row
-		.col-lg-12
-			.panel.panel-default
-				.panel-heading
-					%h3.panel-title
-						%i.fa.fa-user.fa-fw
-						Nuevo paciente
-				.panel-body
+  .row
+    .col-lg-12
+      .panel.panel-default
+        .panel-heading
+          %h3.panel-title
+            %i.fa.fa-user.fa-fw
+            Nuevo paciente
+        .panel-body
+          .col-12
+            .page-header
+              %h1#timeline Timeline
+            %ul.timeline
+              %li{style:"height:100px;"}
+                .timeline-badge.primary
+                  %a{style:"color:white;cursor:pointer;",href:"/eventos/new?paciente_id=#{@paciente.id}"}
+                    %i.glyphicon.glyphicon-plus
+                
+              %li
+                .timeline-badge
+                  %i.glyphicon.glyphicon-check
+                .timeline-panel
+                  .timeline-heading
+                    %h4.timeline-title Mussum ipsum cacilds
+                    %p
+                      %small.text-muted
+                        %i.glyphicon.glyphicon-time
+                        11 hours ago via Twitter
+                  .timeline-body
+                    %p Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+              %li.timeline-inverted
+                .timeline-badge.warning
+                  %i.glyphicon.glyphicon-credit-card
+                .timeline-panel
+                  .timeline-heading
+                    %h4.timeline-title Mussum ipsum cacilds
+                  .timeline-body
+                    %p Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+                    %p Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.
+
+    
+
+
 
 
 
